<resources>
    <string name="app_name">Movie</string>
    <string name="welcome">Welcome 👋</string>
    <string name="description">Let\'s relax and watch a movie!</string>
    <string name="image_favorite">Image Favorite</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="now_playing">Now Playing</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="lorem_ipsum">Lorem</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="synopsis">Synopsis</string>
    <string name="lorem_ipsum_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vehicula sem sit amet placerat auctor. Ut in nunc accumsan, fringilla metus ut, ornare magna. Aliquam facilisis mi sit amet posuere pharetra. Duis purus tellus, dictum non tincidunt varius, lobortis sed est. Nulla posuere vel leo vel elementum. Nulla ex lacus, ornare nec cursus vitae, tempor et ex. Sed volutpat felis elit, in lacinia eros hendrerit nec</string>
    <string name="fab">fab</string>
    <string name="score">%1$s / 10</string>
    <string name="error_message">Terjadi Kesalahan</string>
    <string name="unknown">Unknown</string>
    <string name="no_info">No Info</string>
    <string name="success_added_message">Movie successfully added to favorite list</string>
    <string name="success_removed_message">Movie successfully removed from favorite list</string>
    <string name="upcoming">Upcoming</string>
    <string name="all_movie">All Movie</string>
    <string name="favorite">Favorite</string>
    <string name="empty_data">Empty Data</string>
    <string name="title_empty_data">Lorem ipsum dolor sit amet</string>
    <string name="title_result_empty_data_movie">No favorite yet!</string>
    <string name="subtitle_result_empty_data_movie">Would you like to add some of your favorite movie now?</string>
    <string name="view_all">View all</string>
    <string name="detail_movie">Detail movie</string>
    <string name="add_favorites">Add Favorites</string>
</resources>