<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.movie.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/welcome"
            android:textColor="#D8D8D8"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_favorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            app:cardBackgroundColor="#757575"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toBottomOf="@+id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_welcome">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_favorite"
                android:src="@drawable/ic_favorite" />

        </androidx.cardview.widget.CardView>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerUpcoming"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <TextView
            android:id="@+id/tv_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/now_playing"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/viewPagerUpcoming" />

        <TextView
            android:id="@+id/tv_see_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/view_all"
            android:textColor="#757575"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_now_playing"
            app:layout_constraintEnd_toEndOf="@+id/cv_favorite"
            app:layout_constraintTop_toTopOf="@+id/tv_now_playing" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_now_playing" />

        <include
            android:id="@+id/progress_bar"
            layout="@layout/custom_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>