<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/posterDetail"
                android:layout_width="250dp"
                android:layout_height="350dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/genre"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/posterDetail"
                app:layout_constraintTop_toTopOf="@+id/posterDetail" />

            <ImageView
                android:id="@+id/img_genre"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_genre"
                app:layout_constraintEnd_toEndOf="@+id/genre"
                app:layout_constraintStart_toStartOf="@+id/genre"
                app:layout_constraintTop_toTopOf="@+id/genre"
                android:contentDescription="@string/genre" />

            <TextView
                android:id="@+id/tv_title_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/genre"
                android:textColor="#78909C"
                app:layout_constraintEnd_toEndOf="@+id/genre"
                app:layout_constraintStart_toStartOf="@+id/genre"
                app:layout_constraintTop_toBottomOf="@+id/img_genre" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_title_genre"
                app:layout_constraintStart_toStartOf="@+id/tv_title_genre"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_genre" />

            <View
                android:id="@+id/duration"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/rectangle"
                app:layout_constraintBottom_toTopOf="@+id/rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/posterDetail"
                app:layout_constraintTop_toBottomOf="@+id/genre" />

            <ImageView
                android:id="@+id/img_duration"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_duration"
                app:layout_constraintEnd_toEndOf="@+id/duration"
                app:layout_constraintStart_toStartOf="@+id/duration"
                app:layout_constraintTop_toTopOf="@+id/duration"
                android:contentDescription="@string/duration" />

            <TextView
                android:id="@+id/tv_title_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/duration"
                android:textColor="#78909C"
                app:layout_constraintEnd_toEndOf="@+id/duration"
                app:layout_constraintStart_toStartOf="@+id/duration"
                app:layout_constraintTop_toBottomOf="@+id/img_duration" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_title_duration"
                app:layout_constraintStart_toStartOf="@+id/tv_title_duration"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_duration" />

            <View
                android:id="@+id/rating"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/rectangle"
                app:layout_constraintBottom_toBottomOf="@+id/posterDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/posterDetail" />

            <ImageView
                android:id="@+id/img_rating"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_rating"
                app:layout_constraintEnd_toEndOf="@+id/rating"
                app:layout_constraintStart_toStartOf="@+id/rating"
                app:layout_constraintTop_toTopOf="@+id/rating"
                android:contentDescription="@string/rating" />

            <TextView
                android:id="@+id/tv_title_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/rating"
                android:textColor="#78909C"
                app:layout_constraintEnd_toEndOf="@+id/rating"
                app:layout_constraintStart_toStartOf="@+id/rating"
                app:layout_constraintTop_toBottomOf="@+id/img_rating" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_title_rating"
                app:layout_constraintStart_toStartOf="@+id/tv_title_rating"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_rating" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/posterDetail"
                app:layout_constraintTop_toBottomOf="@+id/posterDetail" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#727378"
                app:layout_constraintEnd_toEndOf="@+id/rating"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/synopsis"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/lorem_ipsum_description"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_synopsis"
                app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foregroundGravity="bottom"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:fabSize="normal"
        app:layout_anchor="@id/nested_scrollview"
        app:layout_anchorGravity="bottom|end|right"
        android:contentDescription="@string/fab" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>